style: style for menu card fixing state and custom scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,21 +136,26 @@
   --color-brown-footer: var(--brown-footer);
   --color-light-brown: var(--light-brown);
 }
-.custom-scroll::-webkit-scrollbar {
+/* globals.css */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #f4a261 rgba(0, 0, 0, 0.05);
+}
+
+/* WebKit (Chrome, Edge, Safari) */
+*::-webkit-scrollbar {
   width: 8px;
 }
-.custom-scroll::-webkit-scrollbar-track {
+
+*::-webkit-scrollbar-track {
   background: rgba(0, 0, 0, 0.05);
 }
-.custom-scroll::-webkit-scrollbar-thumb {
+
+*::-webkit-scrollbar-thumb {
   background-color: #f4a261;
   border-radius: 4px;
 }
 
-.custom-scroll {
-  scrollbar-width: thin;
-  scrollbar-color: #f4a261 rgba(0, 0, 0, 0.05);
-}
 
 
 @layer base {
